--- a/styles.css
+++ b/styles.css
@@ -413,6 +413,9 @@ about page  */
         color:#6A7EFC;
     }
 
+    .social-links {
+        color: #6A7EFC;
+    }
     .genre-heading {
         font-family:  'IM Fell English SC', serif;
         text-decoration: underline;
